[gd_scene load_steps=3 format=3 uid="uid://h12l3d1hcmap"]

[ext_resource type="Theme" uid="uid://bka6i68urcl7m" path="res://assets/resources/gui/lobbymenu_theme.tres" id="1_ranky"]
[ext_resource type="Script" path="res://scripts/gui/menu/lobby/LobbyMenu.gd" id="2_04whh"]

[node name="LobbyMenu" type="Control"]
layout_mode = 3
anchor_top = 0.075
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ranky")
script = ExtResource("2_04whh")

[node name="MainPane" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainPane"]
layout_mode = 2

[node name="LeftPane" type="MarginContainer" parent="MainPane/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainPane/HBoxContainer/LeftPane"]
layout_mode = 2

[node name="TitleBox" type="VBoxContainer" parent="MainPane/HBoxContainer/LeftPane/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="LobbyNameLabel" type="Label" parent="MainPane/HBoxContainer/LeftPane/VBoxContainer/TitleBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 25
text = "ERR: LOBBY_NAME"
vertical_alignment = 1

[node name="LobbyInfo" type="HBoxContainer" parent="MainPane/HBoxContainer/LeftPane/VBoxContainer/TitleBox"]
layout_mode = 2

[node name="LobbyMode" type="PanelContainer" parent="MainPane/HBoxContainer/LeftPane/VBoxContainer/TitleBox/LobbyInfo"]
layout_mode = 2

[node name="Label" type="Label" parent="MainPane/HBoxContainer/LeftPane/VBoxContainer/TitleBox/LobbyInfo/LobbyMode"]
layout_mode = 2
text = "ERR: LOBBY_MODE"

[node name="LobbyType" type="PanelContainer" parent="MainPane/HBoxContainer/LeftPane/VBoxContainer/TitleBox/LobbyInfo"]
layout_mode = 2

[node name="Label" type="Label" parent="MainPane/HBoxContainer/LeftPane/VBoxContainer/TitleBox/LobbyInfo/LobbyType"]
layout_mode = 2
text = "ERR: LOBBY_TYPE"

[node name="LobbyState" type="PanelContainer" parent="MainPane/HBoxContainer/LeftPane/VBoxContainer/TitleBox/LobbyInfo"]
layout_mode = 2

[node name="Label" type="Label" parent="MainPane/HBoxContainer/LeftPane/VBoxContainer/TitleBox/LobbyInfo/LobbyState"]
layout_mode = 2
text = "ERR: LOBBY_STATE"

[node name="HSeparator" type="HSeparator" parent="MainPane/HBoxContainer/LeftPane/VBoxContainer/TitleBox"]
layout_mode = 2

[node name="ActionBox" type="HBoxContainer" parent="MainPane/HBoxContainer/LeftPane/VBoxContainer/TitleBox"]
layout_mode = 2

[node name="PasswordEdit" type="LineEdit" parent="MainPane/HBoxContainer/LeftPane/VBoxContainer/TitleBox/ActionBox"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Entering a password here will add a password to the current lobby"
placeholder_text = "lobby password"
max_length = 20
clear_button_enabled = true

[node name="ExitButton" type="Button" parent="MainPane/HBoxContainer/LeftPane/VBoxContainer/TitleBox/ActionBox"]
layout_mode = 2
text = "Exit Lobby"

[node name="HSeparator2" type="HSeparator" parent="MainPane/HBoxContainer/LeftPane/VBoxContainer/TitleBox"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MainPane/HBoxContainer/LeftPane/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="Members" type="VBoxContainer" parent="MainPane/HBoxContainer/LeftPane/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RightPane" type="MarginContainer" parent="MainPane/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LobbyTabs" type="TabContainer" parent="MainPane/HBoxContainer/RightPane"]
layout_mode = 2

[node name="ChatTab" type="MarginContainer" parent="MainPane/HBoxContainer/RightPane/LobbyTabs"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainPane/HBoxContainer/RightPane/LobbyTabs/ChatTab"]
layout_mode = 2

[node name="ChatDisplay" type="RichTextLabel" parent="MainPane/HBoxContainer/RightPane/LobbyTabs/ChatTab/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MainPane/HBoxContainer/RightPane/LobbyTabs/ChatTab/VBoxContainer"]
layout_mode = 2

[node name="ChatEntryLine" type="LineEdit" parent="MainPane/HBoxContainer/RightPane/LobbyTabs/ChatTab/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "enter message"
caret_blink = true

[node name="SendButton" type="Button" parent="MainPane/HBoxContainer/RightPane/LobbyTabs/ChatTab/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Send
"

[node name="ChallengeTab" type="MarginContainer" parent="MainPane/HBoxContainer/RightPane/LobbyTabs"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MainPane/HBoxContainer/RightPane/LobbyTabs/ChallengeTab"]
layout_mode = 2

[node name="Challenges" type="VBoxContainer" parent="MainPane/HBoxContainer/RightPane/LobbyTabs/ChallengeTab/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MatchesTab" type="MarginContainer" parent="MainPane/HBoxContainer/RightPane/LobbyTabs"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MainPane/HBoxContainer/RightPane/LobbyTabs/MatchesTab"]
layout_mode = 2

[node name="Matches" type="VBoxContainer" parent="MainPane/HBoxContainer/RightPane/LobbyTabs/MatchesTab/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HistoryTab" type="MarginContainer" parent="MainPane/HBoxContainer/RightPane/LobbyTabs"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MainPane/HBoxContainer/RightPane/LobbyTabs/HistoryTab"]
layout_mode = 2

[node name="PreviousMatches" type="VBoxContainer" parent="MainPane/HBoxContainer/RightPane/LobbyTabs/HistoryTab/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MatchSettingsTab" type="MarginContainer" parent="MainPane/HBoxContainer/RightPane/LobbyTabs"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MainPane/HBoxContainer/RightPane/LobbyTabs/MatchSettingsTab"]
layout_mode = 2

[node name="MatchSettings" type="VBoxContainer" parent="MainPane/HBoxContainer/RightPane/LobbyTabs/MatchSettingsTab/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
